styles-2.css
/* ... */
/* این کد مفید نیست (کار نمی کند) چرا که در حالت لمسی قبل از این که کد های
 جاوا اسکریپت بخواهند متوجه هر رخدادی شوند خود دستگاه ی تواند رویداد ها را 
 مدیریت کند؛ مثلا وقتی سیستم حس می کند که کاربر با کشیدن دست می خواهد اسکرول کند بلافاصله آن 
 را به عنوان pointercancel یا همان touchcancel
 تشخیص داده و مانع اجرای دستوراتی می شود که باید در زمان حرکت تاچ طبق کدهای
  جاوا اسکریپتی که برایش در نظر گرفته شده عمل کنند */

/* .is-pointer-down .card-info > div:first-child {
    pointer-events: none;
} */

/* در صورتی که مرورگر قدیمی باشد یا به هر دلیلی استایل "touch-action: pan-y"
را ساپورت نکند به جای استایل بالا (که گفته شد مفید نیست) مجبور هستیم از این استایل ها استفاده کنیم */

.not-scrollable-children .card-info > div:first-child {
    overflow-x: visible;
    overflow-y: visible;
}
/* .not-scrollable-children * {
    overflow-x: visible !important;
    overflow-y: visible !important;
} */



.cards-wrapper .card-outer {
    display: block;
    border-radius: 6px;
    -webkit-transition: -webkit-box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.1s cubic-bezier(0.4, 0, 1, 1);
    transition: -webkit-box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.1s cubic-bezier(0.4, 0, 1, 1);
    transition: box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), transform 0.1s cubic-bezier(0.4, 0, 1, 1);
    transition: box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), transform 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.1s cubic-bezier(0.4, 0, 1, 1);
    transition: box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), transform 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-box-shadow 0.1s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.1s cubic-bezier(0.4, 0, 1, 1);
}
.cards-wrapper .card-outer:hover {
    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
}
.slider-cards-list .card-outer:hover {
    -webkit-transform: translateY(-2px);
    transform: translateY(-2px);
}
.slider-cards-list .card-inner {
    width: 210px;
    min-width: 210px;
    padding: 10px 12px 23px;
}
.card-img-cont {
    display: block;
    position: relative;
    width: 100%;
    line-height: 0;
    border-radius: 8px;
    border: 1px solid #d8d8d8;
    overflow: hidden;
    /* -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box; */
}
.cards-wrapper img {
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
}
.card-img-cont img {
    /* height: inherit; */
    /* width: inherit; */
    width: 186px;
    background-color: #f7f7f7;
}
.cards-wrapper .card-info {
    position: relative;
    text-align: center;
    white-space: normal;
    padding-top: 10px;
    width: 100%;
}
.cards-wrapper .card-info > div:first-child {
    height: 80px;
    overflow-y: auto;
}
.cards-wrapper p {
    line-height: normal;
}
.cards-wrapper .product-name,
.cards-wrapper .product-branding {
    font-size: 0.95rem;
    font-weight: bold;
    line-height: 1.3;
    margin: 0;
}
.cards-wrapper .product-branding {
    margin: 3px 0 0;
}
.cards-wrapper .product-category {
    font-size: 0.8rem;
    margin: 8px 0 0;
}
.cards-wrapper .product-price {
    font-size: 0.8rem;
    font-weight: normal;
    margin-top: 3px;
}
.cards-wrapper em {
    font-style: normal;
    font-weight: bold;
    color: inherit;
}
.cards-wrapper .product-price .price {
    font-size: 140%;
    margin-left: 2px;
}
@media (min-width: 451px) and (max-width: 767px) {
    .f-carousel .f-carousel-cap {
        font-size: 2.2vw;
    }
}
@media (max-width: 575px) {
    .auto-container {
        margin-right: 8px;
        margin-left: 8px;
        padding: 0;
    }
}
@media (min-width: 576px) {
    .box-padding {
        padding: 14px 15px 12px;
    }
    .f-carousel-items-container {
        height: 400px;
    }
}
@media (min-width: 768px) {
    .f-carousel .f-carousel-cap {
        font-size: 1rem;
    }
}
@media (min-width: 992px) {
    .auto-container {
        padding: 0 20px;
    }
    .f-carousel-items-container {
        height: 476px;
    }
}
@media (min-width: 992px) and (max-width: 1199px) {
    .auto-container {
        max-width: 990px;
    }
}
/*! CSS Used fontfaces */
/* @font-face {
    font-family: "icomoon";
    src: url("fonts/fontIcons/icomoon.eot?n4zfc");
    src: url("fonts/fontIcons/icomoon.eot?n4zfc#iefix") format("embedded-opentype"), 
        url("fonts/fontIcons/icomoon.ttf?n4zfc") format("truetype"),
        url("fonts/fontIcons/icomoon.woff?n4zfc") format("woff"),
        url("fonts/fontIcons/icomoon.svg?n4zfc#icomoon") format("svg");
    font-weight: normal;
    font-style: normal;
    font-display: block;
} */


.card {
    z-index: 0;
}
.card.is-selected {
    z-index: 1;
}


.nonUniSize-1 img,
.nonUniSize-2 img {
    max-width: 100%;
}
.nonUniSize-1 .card-img-cont,
.nonUniSize-2 .card-img-cont {
    min-height: 167px;
}
.nonUniSize-1 .card-inner,
.nonUniSize-2 .card-inner {
    max-width: 100%;
    min-width: auto;
    width: auto;
}

.nonUniSize-1 .card:nth-child(1) { width: 180px; }
.nonUniSize-1 .card:nth-child(2) { width: 300px; }
.nonUniSize-1 .card:nth-child(3) { width: 230px; }
.nonUniSize-1 .card:nth-child(4) { width: 160px; }
.nonUniSize-1 .card:nth-child(5) { width: 160px; }
.nonUniSize-1 .card:nth-child(6) { width: 150px; }
.nonUniSize-1 .card:nth-child(7) { width: 120px; }
.nonUniSize-1 .card:nth-child(8) { width: 100px; }
.nonUniSize-1 .card:nth-child(9) { width: 165px; }
.nonUniSize-1 .card:nth-child(10) { width: 155px; }
.nonUniSize-1 .card:nth-child(11) { width: 130px; }
.nonUniSize-1 .card:nth-child(12) { width: 185px; }
.nonUniSize-1 .card:nth-child(13) { width: 210px; }
.nonUniSize-1 .card:nth-child(14) { width: 140px; }
.nonUniSize-1 .card:nth-child(15) { width: 195px; }

.nonUniSize-2 .card:nth-child(1) { width: 180px; }
.nonUniSize-2 .card:nth-child(2) { width: 210px; }
.nonUniSize-2 .card:nth-child(3) { width: 230px; }
.nonUniSize-2 .card:nth-child(4) { width: 160px; }
/* ... */

